--- a/Images/wordpress/release.env
+++ b/Images/wordpress/release.env
@@ -1,5 +1,5 @@
 #Project specific repo details
-export CENTOS_TAG=${CENTOS_TAG:-latest}
+export CENTOS_TAG=${CENTOS_TAG:-7}
 export BUILD_DATE=${BUILD_DATE:-`date -u "+%Y-%m-%dT%H:%M:%SZ"`}
 export RELEASE_DATE=`expr $(date +%s -d"Feb 19, 2021 00:00:00") \* 1000`
 #Image ARGs
